fixed footer temp fix for august testing on tablet

--- a/public2/css/module.css
+++ b/public2/css/module.css
@@ -765,3 +765,8 @@ i.big.unlock.icon {
 }
 
 
+/* FIX for tablet user tested fixed footer */
+
+#page-article {
+    margin-bottom: 50px !important;
+}
